# generic-lens

./: .gitignore  .gitmodules  .travis.yml  ChangeLog.md  DList.hs  LICENSE  README.md  cabal.haskell-ci  cabal.project  ci.nix  generic-lens.cabal  generic-records.cabal  hie.yaml  stack.yaml
.github/: FUNDING.yml
.github/workflows/: haskell-ci.yml  haskell.yml
benchmarks/: Bench.hs
examples/: Biscuits.hs  Examples.hs  StarWars.hs  doctest.hs
generic-lens/: ChangeLog.md  LICENSE  generic-lens.cabal
generic-lens-core/: ChangeLog.md  generic-lens-core.cabal
generic-lens-core/examples/: Biscuits.hs
generic-lens-core/src/Data/GenericLens/: Internal.hs
generic-lens-core/src/Data/Generics/: Product.hs  Wrapped.hs
generic-lens-core/src/Data/Generics/Internal/: Errors.hs  Families.hs  GenericN.hs  Void.hs  Wrapped.hs
generic-lens-core/src/Data/Generics/Internal/Families/: Collect.hs  Has.hs
generic-lens-core/src/Data/Generics/Internal/Profunctor/: Iso.hs  Lens.hs  Prism.hs
generic-lens-core/src/Data/Generics/Internal/VL/: Lens.hs  Prism.hs  Traversal.hs
generic-lens-core/src/Data/Generics/Product/: #Positions.hs#  Fields.hs  HList.hs  Param.hs  Positions.hs
generic-lens-core/src/Data/Generics/Product/Internal/: Constraints.hs  Fields.hs  GLens.hs  HList.hs  Param.hs  Positions.hs  Subtype.hs  Typed.hs  Types.hs
generic-lens-core/src/Data/Generics/Sum/: Subtype.hs  Typed.hs
generic-lens-core/src/Data/Generics/Sum/Internal/: Constructors.hs  Subtype.hs  Typed.hs
generic-lens-core/test/: Spec.hs  Test24.hs  Test25.hs  Test71.hs  Util.hs  doctest.hs
generic-lens/examples/: Biscuits.hs  Examples.hs
generic-lens/perf/: Main.hs
generic-lens/src/Data/Generics/: Labels.hs  Product.hs  Sum.hs  Wrapped.hs
generic-lens/src/Data/Generics/Internal/: VL.hs
generic-lens/src/Data/Generics/Internal/VL/: Iso.hs  Lens.hs  Prism.hs
generic-lens/src/Data/Generics/Product/: Any.hs  Constraints.hs  Fields.hs  HList.hs  Param.hs  Positions.hs  Subtype.hs  Typed.hs  Types.hs
generic-lens/src/Data/Generics/Product/Internal/: Constraints.hs
generic-lens/src/Data/Generics/Sum/: Any.hs  Constructors.hs  Subtype.hs  Typed.hs
generic-lens/test/: CustomChildren.hs  Spec.hs  Test146.hs  Test62.hs  Test63.hs
generic-lens/test/syb/: Tree.hs
generic-optics/: CHANGELOG.md  ChangeLog.md  generic-optics.cabal
generic-optics/examples/: Biscuits.hs  Examples.hs  doctest.hs
generic-optics/perf/: Main.hs
generic-optics/src/Data/Generics/: Labels.hs  Wrapped.hs
generic-optics/src/Data/Generics/Internal/: Optics.hs
generic-optics/src/Data/Generics/Product/: #Fields.hs#  Any.hs  Fields.hs  HList.hs  Param.hs  Positions.hs  Subtype.hs  Typed.hs  Types.hs
generic-optics/src/Data/Generics/Sum/: Any.hs  Constructors.hs  Subtype.hs  Typed.hs
generic-optics/test/: Bifunctor.hs  CustomChildren.hs  Spec.hs  Test146.hs  Test24.hs  Test25.hs  Test40.hs  Test62.hs  Test63.hs  Test71.hs  Test88.hs
generic-optics/test/syb/: Tree.hs
src/: Boggle.hs  Opt.hs
src/Data/: Profunctor.hs  Tagged.hs
src/Data/Generic/: Record.hs
src/Data/Generic/Internal/: Lens.hs
src/Data/Generic/Product/: HasFieldAt.hs
src/Data/Generic/Record/: HasField.hs  Lens.hs  Subtype.hs
src/Data/Generic/Record/Internal/: Contains.hs  Lens.hs
src/Data/GenericLens/: Internal.hs
src/Data/Generics/: Iso.hs  Labels.hs  Product.hs  Record.hs  Sum.hs  Wrapped.hs
src/Data/Generics/Internal/: Errors.hs  Families.hs  GenericDeep.hs  GenericN.hs  HList.hs  Lens.hs  Simple.hs  Void.hs
src/Data/Generics/Internal/Families/: Bool.hs  Changing.hs  Collect.hs  Count.hs  Find.hs  Has.hs
src/Data/Generics/Internal/Optic/: Iso.hs  Lens.hs  Prism.hs
src/Data/Generics/Internal/Optic/Signatures/: Iso.hsig  Lens.hsig  Prism.hsig
src/Data/Generics/Internal/Profunctor/: Iso.hs  Lens.hs  Prism.hs
src/Data/Generics/Internal/VL/: Iso.hs  Lens.hs  Prism.hs  Traversal.hs
src/Data/Generics/Product/: Any.hs  Boggle.hs  Constraints.hs  Fields.hs  HList.hs  HasFieldAt.hs  List.hs  Numbered.hs  Param.hs  Positions.hs  Subtype.hs  Tuple.hs  Typed.hs  Types.hs
src/Data/Generics/Product/Internal/: Constraints.hs  Fields.hs  GLens.hs  HList.hs  Keyed.hs  List.hs  Param.hs  Positions.hs  Subtype.hs  Typed.hs  Types.hs
src/Data/Generics/Record/: HasField.hs  Subtype.hs
src/Data/Generics/Record/Internal/: Contains.hs
src/Data/Generics/Sum/: Any.hs  Constructors.hs  HasConstructor.hs  Subtype.hs  Typed.hs
src/Data/Generics/Sum/Internal/: Constructors.hs  Subtype.hs  Typed.hs
src/Data/Profunctor/: Extra.hs  Unsafe.hs
src/Records/: Generic.hs
src/Records/Generic/: HasField.hs  Lens.hs  Subtype.hs
test/: 24.hs  25.hs  Bifunctor.hs  CustomChildren.hs  Spec  Spec.hs  Test62.hs  Test88.hs  TestX.hs  doctest.hs
test/syb/: Tree.hs
