name:                generic-lens

version:             0.2.0.0

synopsis:            Generic data-structure operations exposed as lenses.

description:         This package uses the GHC 8 Generic representation to derive various operations on data structures with a lens interface, including structural subtype relationship between records and positional indexing into arbitrary product types.

homepage:            https://github.com/kcsongor/generic-lens

license:             BSD3

license-file:        LICENSE

author:              Csongor Kiss

maintainer:          kiss.csongor.kiss@gmail.com

category:            Generics, Records, Lens

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a
-- README.
extra-source-files:  ChangeLog.md
                   , examples/StarWars.hs
                   , README.md

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >= 1.10


library
  exposed-modules:   Data.Generics.Record
                   , Data.Generics.Product
                   , Data.Generics.Record.Subtype
                   , Data.Generics.Record.HasField
                   , Data.Generics.Product.HasFieldAt
                   , Data.Generics.Internal.Lens

  other-modules:     Data.Generics.Record.Internal.Contains

  other-extensions:  AllowAmbiguousTypes
                   , DataKinds
                   , FlexibleInstances
                   , FunctionalDependencies
                   , PolyKinds
                   , Rank2Types
                   , ScopedTypeVariables
                   , TypeApplications
                   , TypeFamilies
                   , TypeOperators
                   , UndecidableInstances

  -- Other library packages from which modules are imported.
  build-depends:     base >= 4.9 && <= 5.0

  -- Directories containing source files.
  hs-source-dirs:    src

  -- Base language which the package is written in.
  default-language:  Haskell2010
  ghc-options:       -Wall

source-repository head
  type:     git
  location: https://github.com/kcsongor/generic-lens

test-suite generic-lens-test
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    Spec.hs

  build-depends:     base >= 4.9 && <= 5.0
                   , QuickCheck
                   , hspec
                   , generic-lens

  ghc-options:
    -Wall
  other-extensions:  AllowAmbiguousTypes
                   , DataKinds
                   , FlexibleInstances
                   , FunctionalDependencies
                   , PolyKinds
                   , Rank2Types
                   , ScopedTypeVariables
                   , TypeApplications
                   , TypeFamilies
                   , TypeOperators
                   , UndecidableInstances
  default-language:
    Haskell2010
