name:                generic-records

version:             0.2.0.0

synopsis:            Magic record operations using generics

description:         This package uses the GHC8 Generic representation of records to derive magic classes (a la OverloadedRecordLabels), and prove structural subtyping relationship between records. The latter can be used to upcast the "sub-record" to the more general "interface".

homepage:            https://github.com/kcsongor/generic-records

license:             BSD3

license-file:        LICENSE

author:              Csongor Kiss

maintainer:          kiss.csongor.kiss@gmail.com

category:            Generics, Records

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a
-- README.
extra-source-files:  ChangeLog.md

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >= 1.10


library
  exposed-modules:   Data.Generic.Record
                   , Data.Generic.Record.Subtype
                   , Data.Generic.Record.HasField

  other-modules:     Data.Generic.Internal.Lens

  other-extensions:  AllowAmbiguousTypes
                   , DataKinds
                   , FlexibleInstances
                   , FunctionalDependencies
                   , PolyKinds
                   , Rank2Types
                   , ScopedTypeVariables
                   , TypeApplications
                   , TypeFamilies
                   , TypeOperators
                   , UndecidableInstances

  -- Other library packages from which modules are imported.
  build-depends:     base >= 4.9 && <= 5.0

  -- Directories containing source files.
  hs-source-dirs:    src

  -- Base language which the package is written in.
  default-language:  Haskell2010
  ghc-options:       -Wall
