name:                 generic-lens-core
version:              2.2.1.0
synopsis:             Generically derive traversals, lenses and prisms.
description:          This library uses GHC.Generics to derive efficient optics (traversals, lenses and prisms) for algebraic data types in a type-directed way, with a focus on good type inference and error messages when possible.
                      .
                      This package is the shared internal logic of the
                      @<https://hackage.haskell.org/package/generic-lens generic-lens>@
                      and
                      @<https://hackage.haskell.org/package/generic-optics generic-optics>@
                      libraries.

homepage:             https://github.com/kcsongor/generic-lens
license:              BSD3
license-file:         LICENSE
author:               Csongor Kiss
maintainer:           kiss.csongor.kiss@gmail.com
category:             Generics, Records, Lens
build-type:           Simple
cabal-version:        >= 1.10
Tested-With:          GHC == 8.4.1, GHC == 8.4.4, GHC == 8.6.5, GHC == 8.8.4, GHC == 8.10.3, GHC == 9.0.1, GHC == 9.2.1

extra-source-files:   ChangeLog.md

library
  exposed-modules:    Data.Generics.Internal.GenericN

                    , Data.Generics.Internal.Profunctor.Lens
                    , Data.Generics.Internal.Profunctor.Prism
                    , Data.Generics.Internal.Profunctor.Iso

                    , Data.Generics.Internal.VL.Traversal

                    , Data.GenericLens.Internal

                    , Data.Generics.Internal.Families
                    , Data.Generics.Internal.Families.Changing
                    , Data.Generics.Internal.Families.Collect
                    , Data.Generics.Internal.Families.Has
                    , Data.Generics.Internal.Errors
                    , Data.Generics.Internal.Void

                    , Data.Generics.Internal.Wrapped

                    , Data.Generics.Sum.Internal.Constructors
                    , Data.Generics.Sum.Internal.Typed
                    , Data.Generics.Sum.Internal.Subtype

                    , Data.Generics.Product.Internal.Param
                    , Data.Generics.Product.Internal.Types

                    , Data.Generics.Product.Internal.Fields
                    , Data.Generics.Product.Internal.Typed
                    , Data.Generics.Product.Internal.Positions
                    , Data.Generics.Product.Internal.GLens
                    , Data.Generics.Product.Internal.Subtype

                    , Data.Generics.Product.Internal.HList

  build-depends:      base        >= 4.11 && < 5
                    , text        >= 1.2 && < 1.3
                    , indexed-profunctors >= 0.1 && < 1.0

  hs-source-dirs:     src
  default-language:   Haskell2010
  ghc-options:        -Wall

source-repository head
  type:               git
  location:           https://github.com/kcsongor/generic-lens

